--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
